# ChangeLog for net-misc/curl
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.78 2006/10/22 16:22:11 voxus Exp $

*curl-7.15.5 (22 Oct 2006)

  22 Oct 2006; Konstantin V. Arkhipov <voxus@gentoo.org>
  +curl-7.15.5.ebuild:
  Version bump, closing bug #145414.

  04 Oct 2006; Fabian Groffen <grobian@gentoo.org> curl-7.15.1-r1.ebuild,
  curl-7.15.3.ebuild, curl-7.15.4.ebuild:
  Dropped ~ppc-macos, see you in prefix.

  17 Jul 2006; Alastair Tse <liquidx@gentoo.org> curl-7.15.1-r1.ebuild:
  fix stupid typo

*curl-7.15.4 (17 Jul 2006)

  17 Jul 2006; Alastair Tse <liquidx@gentoo.org>
  +files/curl-7.15.1-test46.patch, +files/curl-7.15-strip-ldflags.patch,
  curl-7.15.1-r1.ebuild, +curl-7.15.4.ebuild:
  Added patch to fix test46 in 7.15.1 (#111555), version bumped to 7.15.4,
  stripped LDFLAGS from curl-config and libcurl.pc.

  01 Jun 2006; Daniel Black <dragonheart@gentoo.org>
  -files/curl-7.15.0-versionnumber.patch, -curl-7.15.1.ebuild:
  purge security vulnerable versions

  02 May 2006; Diego Pettenò <flameeyes@gentoo.org> curl-7.15.3.ebuild:
  Add elibtoolize call.

  27 Apr 2006; Alastair Tse <liquidx@gentoo.org> curl-7.15.1.ebuild,
  curl-7.15.1-r1.ebuild, curl-7.15.3.ebuild:
  fix kerberos dep (#109806)

  28 Apr 2006; Joshua Kinard <kumba@gentoo.org> curl-7.15.1-r1.ebuild:
  Marked stable on mips.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> curl-7.15.3.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Aron Griffis <agriffis@gentoo.org> curl-7.15.1-r1.ebuild:
  Mark 7.15.1-r1 stable on ia64. #125766

*curl-7.15.3 (20 Mar 2006)
*curl-7.15.1-r1 (20 Mar 2006)

  20 Mar 2006; <solar@gentoo.org> +files/curl-7.15-libtftp.patch,
  -curl-7.13.1.ebuild, -curl-7.13.2.ebuild, -curl-7.15.0.ebuild,
  +curl-7.15.1-r1.ebuild, -curl-7.15.2.ebuild, +curl-7.15.3.ebuild:
  - security bump for tftp vuln. CVE-2006-1061 - bug #125766

*curl-7.15.2 (01 Mar 2006)
