@@ -1,3 +1,0 @@
-MD5 d9345a55c8bc67eafcd37fa1b728e00e curl-7.15.4.tar.bz2 1519792
-RMD160 bbef248926d3935272746f605d91e6f03badff6b curl-7.15.4.tar.bz2 1519792
-SHA256 11521127e175eb633c046a2c6ed11f97e81816d3aec9e8cac560763457a8e623 curl-7.15.4.tar.bz2 1519792
