@@ -1,0 +1,3 @@
+MD5 5819f56e93d04cde2992fe88b54cbfad curl-7.16.0.tar.bz2 1566391
+RMD160 1be2153a7a19ac6ec070a6923bc518bcc2c83c08 curl-7.16.0.tar.bz2 1566391
+SHA256 fc8dcda5a933c370c15c832bf1e7316a0690f473fdd6000454d233edaa33bc23 curl-7.16.0.tar.bz2 1566391
