@@ -1,6 +1,17 @@
 # ChangeLog for net-misc/curl
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.78 2006/10/22 16:22:11 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.79 2006/12/09 03:30:39 dragonheart Exp $
+
+*curl-7.16.0 (09 Dec 2006)
+
+  09 Dec 2006; Daniel Black <dragonheart@gentoo.org> curl-7.15.1-r1.ebuild,
+  -curl-7.15.3.ebuild, -curl-7.15.4.ebuild, curl-7.15.5.ebuild,
+  +curl-7.16.0.ebuild:
+  Fixed bug #157539 thanks to Timothy - attempted installtion of non-existant
+  files. Fixed type that ment USE=kerberos disabled the effect of other USE
+  flags (thanks me). Version bump as per bug #154575 thanks Gerry - still
+  masked as no compatible pycurl and all other programs not tested for
+  compatibility
 
 *curl-7.15.5 (22 Oct 2006)
 
